force-app/main/default/objects/Issue__c/fields/Citation__c.field-meta.xml
<CustomField>
    <fullName>Citation__c</fullName>
    <inlineHelpText>Enter Citation Number</inlineHelpText>
    <label>Citation</label>
    <length>32</length>
    <type>Text</type>
</CustomField>