force-app/main/default/objects/Issue__c/fields/Citation_Link__c.field-meta.xml
<CustomField>
    <fullName>Citation_Link__c</fullName>
    <label>Citation Link</label>
    <type>Url</type>
</CustomField>