force-app/main/default/objects/Issue__c/fields/Email_Sender__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender__c</fullName>
    <label>Email Sender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>