force-app/main/default/objects/Issue__c/fields/Issue_Summary__c.field-meta.xml
<CustomField>
    <fullName>Issue_Summary__c</fullName>
    <inlineHelpText>Summary of the Issue</inlineHelpText>
    <label>Issue Summary</label>
    <type>TextArea</type>
</CustomField>