force-app/main/default/objects/Issue__c/fields/Regulator_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Regulator_Source_ID__c</fullName>
    <label>Regulator Source ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>