force-app/main/default/objects/Issue__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <inlineHelpText>What is the Risk Level? (1-5)</inlineHelpText>
    <label>Risk Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level</valueSetName>
    </valueSet>
</CustomField>