force-app/main/default/objects/Issue__c/fields/Round_Point_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_Point_Source_ID__c</fullName>
    <label>Round Point Source ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>